# sapcc

./: .gitignore  .project_env  CMakeLists.txt  README.md  setup
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  common.h  dllist.c  dllist.h  errors.c  errors.h  fileio.c  fileio.h  hash.c  hash.h  list.c  list.h  llist.c  llist.h  memory.c  memory.h  standard.h  strs.c  strs.h  utils.h
src/sapcc/: .clang-format  CMakeLists.txt  emit_parser.h  emitters.c  emitters.h  errors.c  errors.h  logger.h  main.c  parser.c  parser.h  paths.c  paths.h  scanner.c  scanner.h  utils.c  utils.h
test/: simple.g  simple.grammar  test1.sapcc
test/calc/: Makefile  README.md  calc  calc.g  calc_ast.c  calc_ast.h  calc_parser.c  calc_parser.c.old  calc_parser.h  calc_scanner.h  calc_visitor.h  t
test/simple/: Makefile  simp  simple.grammar  simple.output  simple_ast.h  simple_parser.c  simple_parser.h  simple_scanner.h  simple_visitor.h
